--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="app-wrap">
     <header>
       <img alt="FF" src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" />
-      <h1>FF FaceSwap (embed từ Hugging Face Space)</h1>
+      <h1>Biến Bạn Thành Phiên Bản Free Fire</h1>
     </header>
 
     <main>
