--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1>⚡ FF FaceSwap – Demo</h1>
-      <p class="subtitle">Nhúng trực tiếp Space Hugging Face vào GitHub Pages • giao diện tối ưu cho desktop & mobile</p>
+      <h1> Biến Hình Free Fire</h1>
+      <p class="subtitle">Hãy đọc hướng dẫn sử dụng trước khi dùng, bạn phải đồng ý thỏa thuận thì mới sử dụng được tool</p>
     </div>
   </header>
 
