--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1> Biến Hình Free Fire</h1>
+      <h1> ⚡⚡Biến Hình Free Fire⚡⚡</h1>
       <p class="subtitle">Hãy đọc hướng dẫn sử dụng trước khi dùng, bạn phải đồng ý thỏa thuận thì mới sử dụng được tool</p>
     </div>
   </header>
