--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <header class="header">
     <div class="container">
       <h1> ⚡⚡Biến Hình Free Fire⚡⚡</h1>
-      <p class="subtitle">Hãy đọc hướng dẫn sử dụng trước khi dùng, bạn phải đồng ý thỏa thuận thì mới sử dụng được tool</p>
+      <p class="subtitle">Hãy đọc hướng dẫn sử dụng trước khi dùng, bạn phải đồng ý thỏa thuận thì mới sử dụng được tool. Sau khi bấm xác nhận, chờ 5s để hiện tool.</p>
     </div>
   </header>
 
